Working Accel and RPM code

--- a/platformio.ini
+++ b/platformio.ini
@@ -12,3 +12,6 @@
 platform = espressif32
 board = featheresp32
 framework = arduino
+; lib_deps =
+;             esp32async/AsyncTCP@^3.3.6 
+;             esp32async/ESPAsyncWebServer@^3.7.2
