Working Send in test.cpp

--- a/platformio.ini
+++ b/platformio.ini
@@ -12,6 +12,8 @@
 platform = espressif32
 board = featheresp32
 framework = arduino
-; lib_deps =
-;             esp32async/AsyncTCP@^3.3.6 
-;             esp32async/ESPAsyncWebServer@^3.7.2
+; lib_deps = 
+; 	esp32async/AsyncTCP@^3.3.6
+; 	esp32async/ESPAsyncWebServer@^3.7.2
+; 	mkostersitz/ESP32CAN@^0.0.1
+; 	/arduino-libraries/WiFi@^1.2.7
